--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -19,7 +19,7 @@
     justify-content: space-between;
     font-family: sans-serif;
     
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid lightgray;
     height: 150px;
     
 }
