--- a/src/components/yellowBanner/yellowbanner.css
+++ b/src/components/yellowBanner/yellowbanner.css
@@ -7,8 +7,9 @@
     
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin: auto;
+    gap: 30px;
+    /* justify-content: flex-start; */
+    /* margin: auto; */
 }
 
 .individual-banners {
@@ -16,8 +17,15 @@
     align-items: center;
     font-family: sans-serif;
     color: white;
+    /* width: 200px; */
 }
 
 h1{
     font-size: 14px;
+}
+
+.three-dots {
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
 }
